--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -7,7 +7,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #eef1f6;
-    background-color: #343d64;
+    background-color: #0f1012;
   }
 
   #fp-nav ul li a span,
