--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -29,4 +29,13 @@ body {
   h1 {
     text-transform: uppercase;
     font-size: 3em;
+
+  }
+
+  h2 {
+    font-size: 3em;
+  }
+
+  .flex-container {
+    display: flex;
   }
