--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -37,5 +37,10 @@ body {
   }
 
   .flex-container {
+    justify-content: space-around;
     display: flex;
+  }
+
+  .subtitle {
+    margin-bottom: 120px;
   }
