--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -10,7 +10,7 @@ body {
     background-color: #0f1012;
   }
 
-  .start-img {
+  .left-img {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -19,7 +19,7 @@ body {
     opacity: 0.5;
   }
 
-  .impressum-img {
+  .right-img {
     position: absolute;
     height: 100%;
     right: 0;
