--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -15,9 +15,9 @@ body {
     width: 100%;
     height: 0;
     background: grey;
-    visibility: hidden;
     z-index: 10;
     transition: all 1s;
+    overflow: scroll;
   }
 
   .glossar-button {
