--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -90,8 +90,12 @@ body {
     font-size: 2em;
   }
 
+  h3{
+    text-transform: uppercase;
+    font-size: 2.5em;
+  }
   p {
-    font-size: 14px;
+    font-size: 17px;
     line-height: 20px;
     text-align: left;
   }
