--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -1,5 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&display=swap');
 body {
     margin: 0;
+  }
+
+  h1, h2, h3, h4 {
+    font-family: 'Aldrich', sans-serif;
+  }
+
+  h2 {
+    font-size: 45px;
+    margin: 60px auto;
+    width: 80%;
+    text-align: left;
+  }
+
+  p {
+    margin: auto;
+    width: 80%;
+  }
+
+  h2:after {
+    content: "";
+    height: 5px;
+    width: 150px;
+    background-color: #a9c9d4;
+    display: block;
+    margin-top: 5px;
+}
+
+  h1 {
+    text-transform: uppercase;
+    font-size: 55px;
+    line-height: 60px;
+  }
+
+  h3 {
+    margin: auto;
+    width: 80%;
+    text-align: left;
+    margin-bottom: 20px;
   }
   
   #app {
@@ -8,6 +47,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
     color: #eef1f6;
     background-color: #0f1012;
+  }
+
+  .site-container-width {
+    width: 1250px;
+    margin: 0 auto;
   }
 
   .glossar {
@@ -66,7 +110,7 @@ body {
   }
   
   .site-container {
-    width: 1250px;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
   }
@@ -78,15 +122,6 @@ body {
   .fp-tableCell {
     display: flex;
     vertical-align: unset;
-  }
-  
-  h1 {
-    text-transform: uppercase;
-    font-size: 3em;
-  }
-
-  h2 {
-    font-size: 2em;
   }
 
 
@@ -106,7 +141,9 @@ body {
   }
 
   .subtitle {
-    margin-bottom: 120px;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 70px;
   }
 
   .fp-controlArrow.fp-prev {
