glossar and nav

--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -67,7 +67,15 @@ body {
   .glossar-button {
     display: none;
     position: fixed;
-    z-index: 1000;
+    z-index: 80000;
+    top: 20px;
+    right: 10px;
+    background: white;
+    color: black;
+    padding: 2px 10px;
+    border: 1px solid #f3931f;
+    font-size: 13px;
+    cursor: pointer;
   }
 
   .glossar-button-show {
@@ -160,4 +168,9 @@ body {
 }
 fp-slidesContainer{
   height: 350px;
+}
+
+#impreesum-link{
+  font-size: 10px;
+  margin-top: 3px;
 }
