--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -175,3 +175,13 @@ fp-slidesContainer{
   font-size: 10px;
   margin-top: 3px;
 }
+
+.swal2-popup{
+  background: #f3931f !important;
+  font-family: 'Aldrich', sans-serif;
+  font-size: 15px;
+}
+
+.swal2-styled.swal2-confirm {
+  background: black !important;
+}
