<h3> addition + highlights in texts

--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -193,7 +193,10 @@ fp-slidesContainer{
   font-size: 10px;
   margin-top: 3px;
 }
-
+.b {
+  font-weight: bold;
+  font-size: 20px;
+}
 /**************************************************
 
   Popup Styles
