--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -232,3 +232,45 @@ fp-slidesContainer{
   font-family: Roboto, Helvetica, Arial, sans-serif;
   color: white !important
 }
+
+/*
+.fp-section {
+	width: 100%!important;
+	position: absolute;
+	left: 0;
+	top: 0;
+	visibility: hidden;
+	opacity: 0;
+	z-index: 0;
+	transition: all .7s ease-in-out;
+}
+*/
+.fp-section.active {
+	visibility: visible;
+	opacity: 1;
+	z-index: 1;
+}
+
+
+.fp-slidesContainer {
+	width: 100%!important;
+	transform: none!important;
+}
+
+
+.fp-slide {
+	width: 100%!important;
+	position: absolute;
+	left: 0;
+	top: 0;
+	visibility: hidden;
+	opacity: 0;
+	z-index: 0;
+  transition: all .7s ease-in-out;
+}
+
+.fp-slide.active {
+	visibility: visible;
+	opacity: 1;
+	z-index: 1;
+}
