--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -73,7 +73,7 @@ body {
     position: fixed;
     width: 100%;
     height: 0;
-    background: grey;
+    background: #41567e;
     z-index: 505;
     transition: all 1s;
     overflow: scroll;
