--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -221,6 +221,11 @@ fp-slidesContainer{
   color: white;
   padding: 10px 25px!important;
   text-decoration: none!important;
+  border-radius: 0 !important;
+}
+
+.swal2-styled:focus {
+  box-shadow: none !important;
 }
 
 .swal2-container.swal2-shown {
