--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -212,16 +212,16 @@ fp-slidesContainer{
 }
 
 .swal2-styled.swal2-confirm {
-  background: gray !important;
   font-family: 'Roboto', sans-serif!important;
   font-weight: 400!important;
   font-size: 16px!important;
-  background-color: #41567E; 
+  background-color: #41567E !important;
   border: none!important;
   color: white;
   padding: 10px 25px!important;
   text-decoration: none!important;
   border-radius: 0 !important;
+  transition: all 0.1s !important;
 }
 
 .swal2-styled:focus {
@@ -248,18 +248,17 @@ fp-slidesContainer{
   color: white !important
 }
 
-/*
-.fp-section {
-	width: 100%!important;
-	position: absolute;
-	left: 0;
-	top: 0;
-	visibility: hidden;
-	opacity: 0;
-	z-index: 0;
-	transition: all .7s ease-in-out;
+button.swal2-confirm.swal2-styled:hover {
+  background-color:  #4a5a77 !important;
 }
-*/
+
+/**************************************************
+
+  Slides Fading
+
+**************************************************/
+
+
 .fp-section.active {
 	visibility: visible;
 	opacity: 1;
