--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -290,3 +290,27 @@ button.swal2-confirm.swal2-styled:hover {
 	opacity: 1;
 	z-index: 1;
 }
+
+/**************************************************
+
+  Arrows Slider
+
+**************************************************/
+
+
+.fp-controlArrow.fp-prev {
+  border: none;
+  width: 50px;
+  height: 101px;
+  transform: rotate(180deg);
+  background: url(./assets/right-arrow.svg) no-repeat;
+  margin-top: -80px;
+  cursor: pointer;
+}
+.fp-controlArrow.fp-next {
+  border: none;
+  width: 50px;
+  height: 101px;
+  background: url(./assets/right-arrow.svg) no-repeat;
+  cursor: pointer;
+}
