--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -101,7 +101,7 @@ body {
   }
 
   .glossar h2{
-    margin-top: 0;
+    margin-top: 20px;
   }
 
   .left-img {
@@ -313,4 +313,9 @@ button.swal2-confirm.swal2-styled:hover {
   height: 101px;
   background: url(./assets/right-arrow.svg) no-repeat;
   cursor: pointer;
+}
+
+.hide-arrows{
+  width: 0 !important;
+  height: 0 !important;
 }
