--- a/ki-site/src/main.css
+++ b/ki-site/src/main.css
@@ -303,7 +303,7 @@ button.swal2-confirm.swal2-styled:hover {
   width: 50px;
   height: 101px;
   transform: rotate(180deg);
-  background: url(/assets/right-arrow.svg) no-repeat;
+  background: url(assets/right-arrow.svg) no-repeat;
   margin-top: -80px;
   cursor: pointer;
 }
@@ -311,7 +311,7 @@ button.swal2-confirm.swal2-styled:hover {
   border: none;
   width: 50px;
   height: 101px;
-  background: url(/assets/right-arrow.svg) no-repeat;
+  background: url(assets/right-arrow.svg) no-repeat;
   cursor: pointer;
 }
 
